[package]
name = "compiletime-regex"
version = "0.1.0"
edition = "2021"
authors = ["zahash <zahash.z@gmail.com>"]
description = "simple proc macro for compile time regex"
license = "MIT"
repository = "https://github.com/zahash/compiletime-regex/"

[lib]
proc-macro = true

[dependencies]
regex = "1"
syn = "2"
quote = "1"

[dev-dependencies]
syn = { version = "2", features = ["extra-traits"] }
